--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,12 @@
 name: Release
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-      - develop
-    tags:
-      - '*'
+#   push:
+#     branches:
+#       - master
+#       - develop
+#     tags:
+#       - '*'
 
 jobs:
   build:
